telas de login e signup. corrigindo swagger de authhandlers e usershandlers
