# docs/swagger.json
@@ -424,6 +424,17 @@
                 ],
                 "summary": "Login",
                 "operationId": "login",
+                "parameters": [
+                    {
+                        "description": "User object",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.LoginBody"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -548,7 +559,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.UserBody"
+                            "$ref": "#/definitions/handlers.UserBodyWithoutID"
                         }
                     }
                 ],
@@ -667,7 +678,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.UserBodyUpdate"
+                            "$ref": "#/definitions/handlers.UserBodyWithoutID"
                         }
                     }
                 ],
@@ -780,7 +791,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.UserBody"
+                            "$ref": "#/definitions/handlers.UserBodyWithoutID"
                         }
                     }
                 ],
@@ -914,6 +925,17 @@
                 }
             }
         },
+        "handlers.LoginBody": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username_or_email": {
+                    "type": "string"
+                }
+            }
+        },
         "handlers.LoginResponse": {
             "type": "object",
             "properties": {
@@ -961,24 +983,7 @@
                 }
             }
         },
-        "handlers.UserBody": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
-        "handlers.UserBodyUpdate": {
+        "handlers.UserBodyWithoutID": {
             "type": "object",
             "properties": {
                 "email": {
